test/integration/bad/err-target-plusequals-scope.stan
generated quantities {
  real x;
  x = 2.0;
  target += x;
}

